objects/Opportunity_Team_Non_SF__c.object
<CustomObject>
    <description>Contains the team members who do not use Salesforce</description>
    <fields>
        <fullName>Member_Role__c</fullName>
        <description>Role of the member</description>
        <label>Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Account Management Support</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Account Specialist</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>AEP Processor</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health CAC</fullName>
                </value>
                <value>
                    <fullName>Benefit Coder</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Client Consulting Contact</fullName>
                </value>
                <value>
                    <fullName>Clinical Account Consultant</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Dearborn Sales Executive</fullName>
                </value>
                <value>
                    <fullName>Director Account Management</fullName>
                </value>
                <value>
                    <fullName>Director Sales</fullName>
                </value>
                <value>
                    <fullName>DVP Account Management</fullName>
                </value>
                <value>
                    <fullName>DVP Sales</fullName>
                </value>
                <value>
                    <fullName>EHCM Presenter</fullName>
                </value>
                <value>
                    <fullName>EHCM RFP SME</fullName>
                </value>
                <value>
                    <fullName>Electronic Eligibility Specialist</fullName>
                </value>
                <value>
                    <fullName>Full Service Unit</fullName>
                </value>
                <value>
                    <fullName>GPD Director</fullName>
                </value>
                <value>
                    <fullName>GPD Group Benefit Specialist</fullName>
                </value>
                <value>
                    <fullName>GPD Marketing Service Representative</fullName>
                </value>
                <value>
                    <fullName>GPD Sales Executive/AE</fullName>
                </value>
                <value>
                    <fullName>Group Benefit Specialist</fullName>
                </value>
                <value>
                    <fullName>Implementation Manager</fullName>
                </value>
                <value>
                    <fullName>Manager Account Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Name of the Opportunity the Non SF User Team member is related</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Team (Non-Salesforce.com Users)</relationshipLabel>
        <relationshipName>Opportunity_Team_Non_SF</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity Team member who doesnt have access with salesforce</description>
        <label>Opportunity Team Member</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Internal Contact to HCSC who doesnt have access to Salesforce</errorMessage>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Internal_Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.In_Active__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Team Non SF</relationshipLabel>
        <relationshipName>Opportunity_Team_Non_SF</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Team Non SF</label>
    <nameField>
        <displayFormat>OT-{000}</displayFormat>
        <label>OT #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Team Non SF</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>